--- a/projects/sample/sunflower/plugin-project/build.gradle
+++ b/projects/sample/sunflower/plugin-project/build.gradle
@@ -15,7 +15,7 @@
  */
 
 buildscript {
-    ext.shadow_version = '2.0.12-4de02e2e-SNAPSHOT'
+    ext.shadow_version = '2.0.12-888f38c8-SNAPSHOT'
     // Define versions in a single place
     ext {
         // Sdk and tools
@@ -25,13 +25,13 @@ buildscript {
 
         // App dependencies
         appCompatVersion = '1.1.0-beta01'
-        constraintLayoutVersion = '2.0.0-beta1'
+        constraintLayoutVersion = '2.1.0-alpha1'
         coreTestingVersion = '2.0.0'
         coroutinesVersion = "1.3.0-M2"
         espressoVersion = '3.1.1'
         fragmentVersion = '1.1.0-alpha09'
         glideVersion = '4.9.0'
-        gradleVersion = '3.5.1'
+        gradleVersion = '4.1.1'
         gsonVersion = '2.8.2'
         junitVersion = '4.12'
         kotlinVersion = '1.3.41'
@@ -53,6 +53,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven(){
+            url "http://localhost:8081/repository/maven-public/"
+        }
         mavenLocal()
     }
 
@@ -72,6 +75,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven(){
+            url "http://localhost:8081/repository/maven-public/"
+        }
         mavenLocal()
     }
 }
